--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.0
-joblib==1.2.0
-numpy==1.23.0
-scikit-learn==1.1.1
+Flask==3.1.0
+joblib==1.4.2
+numpy==2.1.3
+scikit-learn==1.5.2
+gunicorn==20.1.0 
